--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,11 +14,11 @@ builds:
       - linux_amd64
       - linux_arm
       - linux_arm64
-      - windows_amd64
-      - windows_arm
-      - windows_386
-      - freebsd_amd64
-      - freebsd_arm
+      # - windows_amd64
+      # - windows_arm
+      # - windows_386
+      # - freebsd_amd64
+      # - freebsd_arm
     binary: '{{ .ProjectName }}_v{{ .Version }}'
 archives:
   - formats: [ 'zip' ]
